Fleet UI: Fix disk space tooltip cut off, add tests (#18364)

--- a/frontend/components/DiskSpaceGraph/_styles.scss
+++ b/frontend/components/DiskSpaceGraph/_styles.scss
@@ -32,9 +32,11 @@
     }
   }
 
-  .disk-space-tooltip {
-    display: block;
-    white-space: normal;
-    max-width: 160px;
+  &__data {
+    .disk-space-tooltip {
+      display: block;
+      white-space: normal;
+      max-width: 160px;
+    }
   }
 }
